--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
                     I have enjoyed many challenging positions throughout my career. My personal 
                     and professional experiences have taught me the following about myself: <br><br>
 
-                    I enjoy meeting new people and hearing new perspectives. Kindly reach out if you want to talk about crafting solutions to a problem, emerging technologies, creating software products/platforms or discuss the power of technology :)
+                    I enjoy meeting new people and hearing new perspectives. Kindly reach out if you 
+                    want to talk about crafting solutions to a problem, emerging technologies, creating 
+                    software products/platforms or discuss the power of technology  &#x1F609;
                     
 
                 </p>
